flux/apps/immich/machine-learning-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-machine-learning
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-machine-learning
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      securityContext:
        readOnlyRootFilesystem: true
      containers:
        - name: immich
          image: ghcr.io/immich-app/immich-machine-learning:v3.2.2-openvino
          podSecurityContext:
            fsGroup: 2000
            fsGroupChangePolicy: "Always"
          ports:
            - name: immich-ml
              containerPort: 3003
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: immich-photos
            - mountPath: /cache
              name: immich-cache

          livenessProbe:
            tcpSocket:
              port: immich-ml
            initialDelaySeconds: 10
            periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /xrpc/_health
          #     port: immich
          #   initialDelaySeconds: 10
          #   timeoutSeconds: 5
          resources:
            requests:
              memory: "6G"
              cpu: "2"
              gpu.intel.com/i915: "1"
            limits:
              memory: "6G"
              gpu.intel.com/i915: "1"
      volumes:
        - name: immich-photos
          persistentVolumeClaim:
            claimName: immich-photos
        - name: immich-cache
          emptyDir:
            sizeLimit: 10Gi
