flux/apps/immich/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-server
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      securityContext:
        readOnlyRootFilesystem: true
      containers:
        - name: immich
          image: ghcr.io/immich-app/immich-server:v3.2.2
          podSecurityContext:
            fsGroup: 2000
            fsGroupChangePolicy: "Always"
          ports:
            - name: immich-server
              containerPort: 2283
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: immich-photos

          livenessProbe:
            tcpSocket:
              port: immich-server
            initialDelaySeconds: 10
            periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /xrpc/_health
          #     port: immich
          #   initialDelaySeconds: 10
          #   timeoutSeconds: 5
          resources:
            requests:
              memory: "4G"
              cpu: "1"
            limits:
              memory: "4G"
      volumes:
        - name: immich-photos
          persistentVolumeClaim:
            claimName: immich-photos
