flux/apps/immich/machine-learning-service.yml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich-machine-learning
  ports:
    - name: immich-machine-learning
      port: 3003
      targetPort: immich-machine-learning
      protocol: TCP
