flux/apps/immich/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich-server
  ports:
    - name: immich-server
      port: 2283
      targetPort: immich-server
      protocol: TCP
