flux/apps/immich/service.yml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich
  ports:
    - name: immich
      port: 2283
      targetPort: immich
      protocol: TCP
