flux/apps/immich/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: immich-server
  namespace: immich
  annotations:
    switchboard.borchero.com/ignore: "all"
    external-dns.alpha.kubernetes.io/target: traefik.tartarus.us
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`immich.tartarus.us`)
      kind: Rule
      services:
        - name: immich-server
          kind: Service
          port: 2283
      middlewares:
        - name: https-redirect-middleware
          namespace: immich

  tls:
    secretName: letsencrypt-wildcard-cert-tartarus.us-prod
